--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@vercel/blob": "^0.27.3",
     "ai-study-material-gen": "file:",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
