Fixed file upload logic and added error handling

--- a/.env.local
+++ b/.env.local
@@ -14,3 +14,5 @@ NEXT_PUBLIC_STRIPE_PRICE_ID_MONTHLY = price_1QtDhmPQYOCzgYBexTVuItNr
 HOST_URL='http://localhost:3000/'
 
 STRIPE_WEB_HOOK_KEY = 
+
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_fwobpTSsG9zMYq1X_p9iGEdt4rZrLGGnYtax6X91XnxD7qG"
